--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav class="navbar">
                 <a href="#" class="logo">
-                    <img src="/images/logo.svg" alt="Trasave Logo">
+                    <img src="images/logo.svg" alt="Trasave Logo">
                 </a>
                 <div class="nav-links">
                     <a href="#" class="active">Home</a>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="/images/Group 10.png" alt="Happy traveler with colorful hat and suitcase">
+                <img src="images/Group 10.png" alt="Happy traveler with colorful hat and suitcase">
             </div>
         </div>
     </section>
@@ -61,17 +61,17 @@
 
             <div class="features">
                 <div class="feature">
-                    <div class=""><img src="/images/Service Tips.svg" /></div>
+                    <div class=""><img src="images/Service Tips.svg" /></div>
                     <h3>Save <span class="green-text">money</span></h3>
                     <p>Invest in trasave security for future</p>
                 </div>
                 <div class="feature">
-                    <div><img src="/images/Wedding Gift.svg" /></div>
+                    <div><img src="images/Wedding Gift.svg" /></div>
                     <h3>Earn rewards</h3>
                     <p>Earn rewards and track your money</p>
                 </div>
                 <div class="feature">
-                    <div><img src="/images/Travel Agency.svg" /></div>
+                    <div><img src="images/Travel Agency.svg" /></div>
                     <h3>Travel Global</h3>
                     <p>Use this money for your travelling</p>
                 </div>
