--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="footer-container">
             <!-- Left Section: Logo & Description -->
             <div class="footer-left">
-                <img src="/images/logo.svg" alt="Trasave Logo" class="logo">
+                <img src="images/logo.svg" alt="Trasave Logo" class="logo">
                 <p>TRASAVE travel fund is a good way to track your travel money.</p>
                 <div class="social-icons">
                     <i class="fa-brands fa-instagram"></i>
